@@ -9,7 +9,7 @@ alock_sources = [ 'alock.c', 'alock_utils.c' ]
 
 auth_sources = [ 'auth_none.c' ]
 bg_sources = [ 'bg_none.c', 'bg_blank.c' ]
-cursor_sources = [ 'cursor_none.c', 'cursor_theme.c', 'cursor_font.c' ]
+cursor_sources = [ 'cursor_none.c', 'cursor_theme.c', 'cursor_glyph.c' ]
 
 Import('alock_env')
 
